# NoahGameFrame

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildServer.sh  install4cmake.sh  noahframe_architecture.md  noahframe_architecture_zh.md  vcpkg.json
Dependencies/: build_dep.bat  build_dep.sh  build_dep_with_source_code.bat  build_vcpkg.sh
Dependencies/navigation/: CMakeLists.txt
NFComm/: CMakeLists.txt
NFComm/NFActorPlugin/: CMakeLists.txt
NFComm/NFBluePrintPlugin/: CMakeLists.txt
NFComm/NFConfigPlugin/: CMakeLists.txt
NFComm/NFCore/: CMakeLists.txt
NFComm/NFKernelPlugin/: CMakeLists.txt
NFComm/NFLogPlugin/: CMakeLists.txt
NFComm/NFLuaScriptPlugin/: CMakeLists.txt
NFComm/NFMessageDefine/: CMakeLists.txt  NFMsgDefine.h
NFComm/NFNavigationPlugin/: CMakeLists.txt
NFComm/NFNetPlugin/: CMakeLists.txt  NFNetClientModule.h  NFNetModule.h  NFUDPModule.cpp
NFComm/NFNoSqlPlugin/: CMakeLists.txt
NFComm/NFPluginLoader/: CMakeLists.txt  NFPluginManager.cpp
NFComm/NFPluginModule/: NFILoginToMasterModule.h  NFINetModule.h
NFComm/NFRenderPlugin/: CMakeLists.txt
NFComm/NFSecurityPlugin/: CMakeLists.txt
NFComm/NFTestPlugin/: CMakeLists.txt
NFExamples/NFChatPlugin/: CMakeLists.txt
NFExamples/NFConsumeManagerPlugin/: CMakeLists.txt
NFExamples/NFInventoryPlugin/: CMakeLists.txt
NFExamples/NFServer/: CMakeLists.txt  NFServer.h
NFServer/NFDBLogicPlugin/: CMakeLists.txt
NFServer/NFDBNet_ClientPlugin/: CMakeLists.txt
NFServer/NFDBNet_ServerPlugin/: CMakeLists.txt
NFServer/NFGameServerNet_ClientPlugin/: CMakeLists.txt
NFServer/NFGameServerNet_ServerPlugin/: CMakeLists.txt
NFServer/NFGameServerPlugin/: CMakeLists.txt
NFServer/NFLoginLogicPlugin/: CMakeLists.txt
NFServer/NFLoginNet_ClientPlugin/: CMakeLists.txt
NFServer/NFLoginNet_HttpServerPlugin/: CMakeLists.txt
NFServer/NFLoginNet_ServerPlugin/: CMakeLists.txt
NFServer/NFMasterNet_HttpServerPlugin/: CMakeLists.txt
NFServer/NFMasterNet_ServerPlugin/: CMakeLists.txt
NFServer/NFMasterServerPlugin/: CMakeLists.txt
NFServer/NFProxyLogicPlugin/: CMakeLists.txt
NFServer/NFProxyServerNet_ClientPlugin/: CMakeLists.txt
NFServer/NFProxyServerNet_ServerPlugin/: CMakeLists.txt
NFServer/NFWorldNet_ClientPlugin/: CMakeLists.txt
NFServer/NFWorldNet_ServerPlugin/: CMakeLists.txt
Tutorial/Tutorial1/: CMakeLists.txt
Tutorial/Tutorial2/: CMakeLists.txt
Tutorial/Tutorial3/: CMakeLists.txt
Tutorial/Tutorial4/: CMakeLists.txt
Tutorial/Tutorial5/: CMakeLists.txt
Tutorial/Tutorial6/: CMakeLists.txt
Tutorial/Tutorial7/: CMakeLists.txt
cmake/: NoahBuild.cmake
docs/: build-with-vcpkg.md  project-architecture.md
